2008-08-15  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: removed obsolete
	autogen-sh attributes, as there is now an automatic fallback to
	configure; marked some modules as missing a check target.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py: added automatic fallback to configure
	if autogen.sh does not exist.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: import missing module and initialize
	correctly change notification.

2008-08-15  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: import missing twisted.python.log
	module.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/changes.py, jhbuild/buildbot/scheduler.py: updated
	scheduler to get commit notification via svn-commits-list (untested).

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/scheduler.py: added a project parameter to the
	schedulers.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/bot.py: look for buildbot in lib64/ subdirectory if
	necessary.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.24.modules: poppler-data do not have a check
	target.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-external-deps-2.24.modules: updated
	hicolor-icon-theme to <autotools> type, so it gains check-target
	attribute support.  Same for pwlib and opal, and marked them as
	missing 'make check'.

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/modtypes/autotools.py, modulesets/moduleset.dtd,
	modulesets/gnome-external-deps-2.24.modules: added a new check-target
	attribute to <autotools> modules; for those that do *not* support
	make check (hicolor-icon-theme, sqlite3).

2008-08-14  Frederic Peters  <fpeters@0d.be>

	* jhbuild/buildbot/__init__.py, jhbuild/buildbot/changes.py,
	jhbuild/buildbot/factory.py, jhbuild/buildbot/scheduler.py,