@@ -1,5 +1,10 @@
 2008-08-15  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/buildbot/__init__.py: let master honor the skip configuration
+	variable.
+
+2008-08-15  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-external-deps-2.24.modules: removed obsolete
 	autogen-sh attributes, as there is now an automatic fallback to
 	configure; marked some modules as missing a check target.
